# spicy-lisp

./: README.html  README.md  berryscript.cabal  bubblescript.cabal
eg/: hello.berry  hello.bubble  hello.spicy  whitespace-test.berry
src/: Codegen.hs  Compilation.hs  Lexer.hs  Main.hs  Struct.hs
