cabal-version: 3.0
name: bubblescript
version: 0.1.0.0
license-file: LICENSE
author: ellos0

executable bubble
    main-is:          Main.hs
    hs-source-dirs:   src
    
    other-modules:
      Codegen,
      Struct
    
    build-depends:
      base,
      parsec

    ghc-options: -Wall -Wcompat -Worphans
    
    default-language: Haskell2010
